--- a/NoteCAD.csproj
+++ b/NoteCAD.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Assets\Code\Constraints\EqualLineLine.cs" />
     <Compile Include="Assets\Code\Constraints\PointsCoincident.cs" />
     <Compile Include="Assets\Code\Constraints\PointsDistance.cs" />
+    <Compile Include="Assets\Code\DraftStroke\DraftStorkeTest.cs" />
     <Compile Include="Assets\Code\DraftStroke\DraftStroke.cs" />
     <Compile Include="Assets\Code\Entities\ArcEntity.cs" />
     <Compile Include="Assets\Code\Entities\CircleEntity.cs" />
@@ -124,6 +125,9 @@
     <Compile Include="Assets\Code\Tools\ToolBar.cs" />
     <Compile Include="Assets\Code\Utils\CameraController.cs" />
     <Compile Include="Assets\Code\Utils\NoteCADJS.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Code\DraftStroke\DraftLines.shader" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
