--- a/NoteCAD.csproj
+++ b/NoteCAD.csproj
@@ -15,7 +15,7 @@
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
     <CompilerResponseFile>Assets\smcs.rsp</CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
-    <UnityBuildTarget>WebGL:20</UnityBuildTarget>
+    <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>2017.3.0f3</UnityVersion>
     <RootNamespace></RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
@@ -27,7 +27,7 @@
     <IntermediateOutputPath>Temp\UnityVS_obj\Debug\</IntermediateOutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_3_0;UNITY_2017_3;UNITY_2017;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_GENERICS;ENABLE_PVR_GI;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_GRID;ENABLE_TILEMAP;ENABLE_TERRAIN;ENABLE_DIRECTOR;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_TIMELINE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_NATIVE_ARRAY;ENABLE_SPRITE_MASKING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;ENABLE_MONO_BDWGC;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_VIDEO;ENABLE_RMGUI;ENABLE_PACKMAN;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_STYLE_SHEETS;ENABLE_LOCALIZATION;PLATFORM_WEBGL;UNITY_WEBGL;UNITY_WEBGL_API;UNITY_DISABLE_WEB_VERIFICATION;UNITY_GFX_USE_PLATFORM_VSYNC;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_VR;ENABLE_SPATIALTRACKING;ENABLE_IL2CPP;NET_2_0_SUBSET;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_NATIVE_ARRAY_CHECKS;UNITY_TEAM_LICENSE;ENABLE_VSTU;G3_USING_UNITY;</DefineConstants>
+    <DefineConstants>DEBUG;TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_3_0;UNITY_2017_3;UNITY_2017;PLATFORM_ARCH_64;UNITY_64;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_GENERICS;ENABLE_PVR_GI;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_GRID;ENABLE_TILEMAP;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_DIRECTOR;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_TIMELINE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_NATIVE_ARRAY;ENABLE_SPRITE_MASKING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;ENABLE_MONO_BDWGC;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_VIDEO;ENABLE_RMGUI;ENABLE_PACKMAN;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_STYLE_SHEETS;ENABLE_LOCALIZATION;PLATFORM_STANDALONE_WIN;PLATFORM_STANDALONE;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_VR;ENABLE_AR;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_2_0_SUBSET;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_NATIVE_ARRAY_CHECKS;UNITY_TEAM_LICENSE;ENABLE_VSTU;G3_USING_UNITY;</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -37,7 +37,7 @@
     <IntermediateOutputPath>Temp\UnityVS_obj\Release\</IntermediateOutputPath>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DefineConstants>TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_3_0;UNITY_2017_3;UNITY_2017;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_GENERICS;ENABLE_PVR_GI;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_GRID;ENABLE_TILEMAP;ENABLE_TERRAIN;ENABLE_DIRECTOR;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_TIMELINE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_NATIVE_ARRAY;ENABLE_SPRITE_MASKING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;ENABLE_MONO_BDWGC;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_VIDEO;ENABLE_RMGUI;ENABLE_PACKMAN;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_STYLE_SHEETS;ENABLE_LOCALIZATION;PLATFORM_WEBGL;UNITY_WEBGL;UNITY_WEBGL_API;UNITY_DISABLE_WEB_VERIFICATION;UNITY_GFX_USE_PLATFORM_VSYNC;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_VR;ENABLE_SPATIALTRACKING;ENABLE_IL2CPP;NET_2_0_SUBSET;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_NATIVE_ARRAY_CHECKS;UNITY_TEAM_LICENSE;ENABLE_VSTU;G3_USING_UNITY;</DefineConstants>
+    <DefineConstants>TRACE;UNITY_5_3_OR_NEWER;UNITY_5_4_OR_NEWER;UNITY_5_5_OR_NEWER;UNITY_5_6_OR_NEWER;UNITY_2017_1_OR_NEWER;UNITY_2017_2_OR_NEWER;UNITY_2017_3_OR_NEWER;UNITY_2017_3_0;UNITY_2017_3;UNITY_2017;PLATFORM_ARCH_64;UNITY_64;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_GENERICS;ENABLE_PVR_GI;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_SPRITERENDERER_FLIPPING;ENABLE_SPRITES;ENABLE_GRID;ENABLE_TILEMAP;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_DIRECTOR;ENABLE_UNET;ENABLE_LZMA;ENABLE_UNITYEVENTS;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES_COLLAB;ENABLE_CLOUD_SERVICES_COLLAB_SOFTLOCKS;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_USE_WEBREQUEST;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_HUB;ENABLE_EDITOR_HUB_LICENSE;ENABLE_WEBSOCKET_CLIENT;ENABLE_DIRECTOR_AUDIO;ENABLE_DIRECTOR_TEXTURE;ENABLE_TIMELINE;ENABLE_EDITOR_METRICS;ENABLE_EDITOR_METRICS_CACHING;ENABLE_NATIVE_ARRAY;ENABLE_SPRITE_MASKING;INCLUDE_DYNAMIC_GI;INCLUDE_GI;ENABLE_MONO_BDWGC;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;INCLUDE_PUBNUB;ENABLE_PLAYMODE_TESTS_RUNNER;ENABLE_VIDEO;ENABLE_RMGUI;ENABLE_PACKMAN;ENABLE_CUSTOM_RENDER_TEXTURE;ENABLE_STYLE_SHEETS;ENABLE_LOCALIZATION;PLATFORM_STANDALONE_WIN;PLATFORM_STANDALONE;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_UNITYWEBREQUEST;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_PURCHASING;ENABLE_CLOUD_SERVICES_CRASH_REPORTING;ENABLE_EVENT_QUEUE;ENABLE_CLUSTERINPUT;ENABLE_VR;ENABLE_AR;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;NET_2_0_SUBSET;ENABLE_PROFILER;DEBUG;TRACE;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;ENABLE_NATIVE_ARRAY_CHECKS;UNITY_TEAM_LICENSE;ENABLE_VSTU;G3_USING_UNITY;</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
@@ -676,12 +676,64 @@
     <Compile Include="Assets\Code\External\gsSlicer\utility\PathOverlapRepair.cs" />
     <Compile Include="Assets\Code\External\gsSlicer\utility\TemporalPathHash.cs" />
     <Compile Include="Assets\Code\External\gsSlicer\utility\TopoOffset2d.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\ExternalResources\ColorWheel\ColorWheelControl.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeHierarchy.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeHierarchy\Helpers\HierarchyDragDropListener.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeHierarchy\Helpers\PseudoSceneSourceTransform.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeHierarchy\HierarchyItem.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeHierarchy\HierarchyItemRoot.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeHierarchy\HierarchyItemTransform.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeHierarchy\HierarchyRootPseudoScene.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeHierarchy\HierarchyRootScene.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeHierarchy\IHierarchyRootContent.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Attributes\RuntimeInspectorButtonAttribute.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\ArrayField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\BoolField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\BoundsField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\ColorField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\DecimalField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\EnumField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\ExposedMethodField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\GameObjectField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\InspectorField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\IntegerField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\ObjectField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\ObjectReferenceField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\RectField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\StringField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\TextureReferenceField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\Vector2Field.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\Vector3Field.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Fields\Vector4Field.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\BoundInputField.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\ColorPicker\ColorPicker.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\ColorPicker\ColorPickerAlphaSlider.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\DraggedReferenceItem.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\DraggedReferenceSourceCamera.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\DraggedReferenceSourceUI.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\ExposedMethod.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\ExposedVariablesEnumerator.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\ObjectReferencePicker\ObjectReferencePicker.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\ObjectReferencePicker\ObjectReferencePickerItem.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\PointerEventListener.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\RecycledListView\IListViewAdapter.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\RecycledListView\RecycledListItem.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\RecycledListView\RecycledListView.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\RuntimeInspectorSettings.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\RuntimeInspectorUtils.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\VariableSet.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Helpers\WindowDragHandler.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Skin\SkinnedWindow.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Skin\SkinUtils.cs" />
+    <Compile Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Scripts\RuntimeInspector\Skin\UISkin.cs" />
     <Compile Include="Assets\Code\Features\Detail.cs" />
     <Compile Include="Assets\Code\Features\ExtrusionFeature.cs" />
     <Compile Include="Assets\Code\Features\Feature.cs" />
     <Compile Include="Assets\Code\Features\LinearArrayFeature.cs" />
     <Compile Include="Assets\Code\Features\MeshImportFeature.cs" />
     <Compile Include="Assets\Code\Features\SketchFeature.cs" />
+    <Compile Include="Assets\Code\Features\SketchFeatureBase.cs" />
     <Compile Include="Assets\Code\Features\SliceFeature.cs" />
     <Compile Include="Assets\Code\Geometry\BBox.cs" />
     <Compile Include="Assets\Code\Geometry\GeomUtils.cs" />
@@ -734,10 +786,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Code\DraftStroke\DraftLines.shader" />
+    <None Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\ExternalResources\ColorWheel\LICENSE.txt" />
+    <None Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\ExternalResources\ColorWheel\Visuals\ColorWheelShader.shader" />
+    <None Include="Assets\Code\External\UnityRuntimeInspector\Plugins\RuntimeInspector\Shaders\ColorPickerAlphaShader.shader" />
     <None Include="Assets\Code\External\gsSlicer\thirdparty\clipper_library\License.txt" />
     <None Include="Assets\Materials\LoopShader.shader" />
     <None Include="Assets\TestFiles\sketch_00.xml" />
-    <None Include="Assets\TestFiles\sketch_01.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
